testsuite/tests/lkt/import/invalid/test.out
== conflict_1.lkt ==
conflict_1.lkt:1:8: error: this import conflicts with the dynamic variable common at conflict_1.lkt:8:1
1 | import common
  |        ^^^^^^


== conflict_2.lkt ==
conflict_2.lkt:2:8: error: this import conflicts with module 'common' (imported at 1:8)
2 | import common
  |        ^^^^^^


== conflict_3.lkt ==
conflict_3.lkt:2:20: error: this import conflicts with the dynamic variable myvar at common.lkt:3:1 (imported at 1:1)
2 | from common import myvar
  |                    ^^^^^


== invalid_module_name.lkt ==
error: invalid Lkt source filename: 'common_.lkt'

== reimport.lkt ==
reimport.lkt:2:29: error: cannot re-import entities (imported at common_reimport.lkt:1:20)
2 | from common_reimport import myvar
  |                             ^^^^^


lkt_compile: Done
